<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?attr/selectableItemBackground"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingTop="10dp"
              android:paddingRight="16dp"
              android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.free.music.tube.ui.SquareCardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_cover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/default_track_art"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"/>
        </com.free.music.tube.ui.SquareCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/popupMenu"
            android:layout_toEndOf="@+id/card_view_cover"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/title_music"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/artist"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingTop="3dp"
                    android:singleLine="true"
                    android:text="@string/title_hot"
                    android:textSize="12sp"/>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingLeft="5dp"
                    android:paddingTop="3dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/bullet"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/duration"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingTop="3dp"
                    android:singleLine="true"
                    android:textSize="13sp"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/popupMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_more_vert_black_24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="5dp"
            android:scaleType="centerInside"/>

    </RelativeLayout>
</LinearLayout>