<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_search_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <EditText
            android:id="@+id/etSearch"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/search_hint"
            android:background="@null"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:padding="12dp"/>


    </LinearLayout>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:singleLine="true"
        android:text="@string/no_results"
        android:visibility="gone"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical"
            android:paddingBottom="70dp"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="@color/colorAccent"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        layout="@layout/search_error_container"
        android:visibility="gone"/>
</FrameLayout>