<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?attr/selectableItemBackground"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingTop="10dp"
              android:paddingRight="16dp"
              android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.free.music.tube.ui.SquareCardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_cover"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/player_album_cover"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:background="@drawable/default_track_art"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"/>
        </com.free.music.tube.ui.SquareCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_toEndOf="@+id/card_view_cover"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="5dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/player_track_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/title_music"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/player_track_artist"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:paddingTop="3dp"
                android:text="@string/title_hot"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/license_image"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:paddingTop="3dp"
                android:scaleType="centerCrop"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/player_play_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_play_black_24dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <SeekBar
            android:id="@+id/player_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/player_download_button"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_download_button"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:singleLine="true"
        android:text="@string/download"
        android:textColor="#ffffff"
        android:textSize="16sp"/>


</LinearLayout>